--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-.container {
+.header {
     align-items: center;
     display: flex;
     justify-content: space-between;
@@ -42,18 +42,14 @@
 }
 
 @media screen and (min-width: 0px) {
-    .header__busca-text {
-        display: none;
-    }
-
-    .header__menu-foto {
+    .header__busca-text, .header__menu-foto {
         display: none;
     }
 }
 
 @media screen and (min-width: 768px) {
 
-    .container {
+    .header {
         align-content: space-between;
         flex-direction: column;
         flex-wrap: wrap;
@@ -72,7 +68,7 @@
 }
 
 @media screen and ( min-width: 1024px) {
-    
+
     .header__menu {
         display: none;
     }
@@ -81,5 +77,12 @@
         align-items: center;
         display: flex;
         justify-content: space-around;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    
+    .header__busca-text {
+        width: 752px;
     }
 }
