--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -1,36 +1,39 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
 :root {
-    --cor_bg: #051D3B;
-    --cor_bg-editor: #6bd1ff;
-    --cor_btn: rgba(80, 129, 251, 0.08);
-    --cor_circulo1: #ff5f56;
-    --cor_circulo2: #ffbd2e;
-    --cor_circulo3: #27c93f;
-    --cor_editor: #141414;
-    --cor_input: #FFFFFF29;
-    --cor_placeholder: rgba(255, 255, 255, 0.64);
-    --cor_shadow: rgba(0, 0, 0, 0.24);
-    --cor_txt: #ffffff;
+  --cor_bg: #051d3b;
+  --cor_bg-editor: #6bd1ff;
+  --cor_bg-btn: #5081fb;
+  --cor_bg-projeto: rgba(0, 0, 0, 0.16);
+  --cor_btn: rgba(80, 129, 251, 0.08);
+  --cor_circulo1: #ff5f56;
+  --cor_circulo2: #ffbd2e;
+  --cor_circulo3: #27c93f;
+  --cor_editor: #141414;
+  --cor_input: #ffffff29;
+  --cor_placeholder: rgba(255, 255, 255, 0.64);
+  --cor_shadow: rgba(0, 0, 0, 0.24);
+  --cor_txt: #ffffff;
+  --cor_txt-btn: #051d3b;
 
-    --font_editor-txt: 'Roboto Mono', monospace;
-    --font_padrao: 'Inter', sans-serif;
+  --font_editor-txt: "Roboto Mono", monospace;
+  --font_padrao: "Inter", sans-serif;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: var(--cor_bg);
+  background-color: var(--cor_bg);
 }
 
 @media screen and (min-width: 1440px) {
-    .container {
-        width: 1440px;
-        margin: auto;
-    }
+  .container {
+    width: 1440px;
+    margin: auto;
+  }
 }
