--- a/assets/css/main-editor.css
+++ b/assets/css/main-editor.css
@@ -7,7 +7,6 @@
 }
 
 .code-editor__bg {
-  background: var(--cor_bg-editor);
   border-radius: 8px;
   height: 492px;
   padding: 2rem;
@@ -58,6 +57,15 @@
   font-weight: 400;
   height: 56px;
   margin-top: 2rem;
+}
+
+.code-editor__btn:hover {
+  background: var(--cor_btn-salvar-hover);
+}
+
+.code-editor__btn:active {
+  background: var(--cor_btn-salvar-hover);
+  border: 4px solid rgba(80, 129, 251, 0.24);
 }
 
 @media screen and (min-width: 768px) {
