--- a/assets/css/main-menuRight.css
+++ b/assets/css/main-menuRight.css
@@ -24,6 +24,10 @@
   width: 100%;
 }
 
+.menu__right-nomeProjeto:hover, .menu__right-descricao:hover, .menu__right-select:hover {
+  background: var(--cor_input-hover);
+}
+
 .menu__right-descricao {
   height: 80px;
   margin-bottom: 2.5rem;
@@ -50,6 +54,14 @@
   margin-top: 2rem;
   height: 56px;
   width: 100%;
+}
+
+.btn__salvar-projeto:hover {
+  background: var(--cor_btn-hover);
+}
+
+.btn__salvar-projeto:active {
+  border: 4px solid rgba(80, 129, 251, 0.72);
 }
 
 @media screen and (min-width: 768px) {
